--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,22 @@ body {
   font-family: 'roboto', sans-serif;
   text-transform: none;
 }
+
+@layer utilities {
+  @keyframes glow {
+    0% {
+      background-position: 0 0;
+    }
+    50% {
+      background-position: 400% 0;
+    }
+    100% {
+      background-position: 0 0;
+    }
+  }
+
+  .animate-glow {
+    background-size: 400%;
+    animation: glow 20s linear infinite;
+  }
+}
